--- a/pagina/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
+++ b/pagina/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
@@ -26,9 +26,9 @@
         coffres, creusent des mines et aménagent des champs, comme l'Union à la Contrabase et à Lollipop.
     </p>
     <p class="paragraphe">
-        À eux, nous ne leur fournirons ni bambou, ni white flowers, mais plutôt de la poudre d'os, du papier, des teintures, des poches d'encre, etc.
+        À eux, nous ne leur fournirons ni bambou, ni white roses, mais plutôt de la poudre d'os, du papier, des teintures, des poches d'encre, etc.
         C'est la technique Fish : fournir du poisson au lieu d'enseigner la pêche, ce qui, dans notre cas, revient à fournir de la poudre d'os et non
-        pas de white flowers. Pour le bois, nous userons de la technique Plank : si l'on vend un tron, l'on gagne un dollars, alors que si l'on vend
+        pas de white roses. Pour le bois, nous userons de la technique Plank : si l'on vend un tron, l'on gagne un dollars, alors que si l'on vend
         quatre planches de bois, un tronc divisé par quatre, l'on remporte quatre dollars.
     </p>
 
@@ -39,13 +39,14 @@
     <p class="paragraphe">
         Lollipop, le kmgg qui a été la cible de plusieurs explosions causées par de fortes doses de trinitrotoluène, a été en partie
         restauré. La grande ferme est, grâce à Eloan_Dev, de nouveau utilisable. Elle recouvre une zone gigantesque, avec une source
-        d'eau infinie et de nombreux coffres disposés aux coins la salle.
+        d'eau infinie et de nombreux coffres disposés aux coins de la salle.
     </p>
     <p class="paragraphe">
         Le plafond de ladite salle, de par sa hauteur d'une dizaine de blocs, était censé provoquer chez les joueurs un sentiment de
         petitesse face à la démesure de l'endroit et que la puissance de l'Union marque les esprits. Néanmoins, par soucis d'optimisation
         et que, le reste du complexe souterrain a perdu son charme en étant présentement ravagé, la taille n'est plus une condition. Nous
-        diviserons donc l'endroit endroit en plusieurs étages de deux blocs de haut. Cela permettra de multiplier la production par trois.
+        diviserons donc l'endroit endroit en plusieurs étages de deux blocs de haut. Cela permettra de multiplier la production agricole
+        par trois.
     </p>
     <p class="paragraphe">
         Aussi, une nouveauté accélérera le lancement du système économique de la Nouvelle Birmanie. C'est Sumathe, dont le nom provient de Sumatra,
@@ -61,11 +62,11 @@
         construction prendrait trop de temps alors que la Nouvelle Birmanie a besoin de ce temps si précieux.
     </p>
     <p class="paragraphe">
-        Au Sud et à l'Ouest, si l'on descend, l'on accèdera aux fermes spécifiques aux white flowers ainsi qu'au bambou. Ces espaces agricoles n'ont
+        Au Sud et à l'Ouest, si l'on descend, l'on accèdera aux fermes spécifiques aux white roses ainsi qu'au bambou. Ces espaces agricoles n'ont
         pas encore été aménagés, mais leur utilité est flagrante : la sécurité et l'optimisation et le transport des ressources alimentaires. En effet,
         dans l'hypothèse où la Birmanie subirait un disband, les graines, préalablement décentralisées, seront alors hors de tout danger. Mais encore,
         le fait d'aménager un champs en prévision de recevoir une seule et même espèce de plante utile pour toutes les autres espèces, à savoir les
-        white flowers, offrira une gestion du transport de ressources destinées à l'alimentation plus aisé à l'avenir.
+        white roses, offrira une gestion du transport de ressources destinées à l'alimentation plus aisé à l'avenir.
     </p>
     <p class="paragraphe">
         Toujours au sas principal de Sumathe, à l'Est, se trouve une mine, lieu indispensable pour se fournir en métaux dont notamment du fer et du
