--- a/text/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
+++ b/text/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
@@ -38,7 +38,7 @@
     </p>
     <p class="paragraphe">
         Lollipop, le kmgg qui a été la cible de plusieurs explosions causées par de fortes doses de trinitrotoluène, a été en partie
-        restauré. La grande ferme est, grâce à Eloan_Dev, de nouveau utilisable. Elle recouvre une zone gigantesque, avec une source
+        restauré. La grande ferme est, de nouveau utilisable. Elle recouvre une zone gigantesque, avec une source
         d'eau infinie et de nombreux coffres disposés aux coins de la salle.
     </p>
     <p class="paragraphe">
