--- a/text/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
+++ b/text/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
@@ -55,7 +55,7 @@
     </p>
     <p class="paragraphe">
         À l'intérieur du kutell, sous quelques couches de terre, se trouve le sas principal, point culminant et où sont disposés des tabloïdes indicateurs
-        de direction. C'est ici qu'il est le plus judicieux, pour les Sumathoje, de définir son home.
+        de direction. C'est ici qu'il est le plus judicieux, pour les Sumathoje, de définir leur home.
     </p>
     <p class="paragraphe">
         En descendant l'escalier Nord, l'on arrive à Puvüphononshe, ville souterraine qui ne verra probablement jamais le jour, dans le sens où sa
