--- a/text/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
+++ b/text/plan-officiel-de-lancement-du-systeme-economique-de-la-nouvelle-birmanie.html
@@ -50,7 +50,7 @@
     </p>
     <p class="paragraphe">
         Aussi, une nouveauté accélérera le lancement du système économique de la Nouvelle Birmanie. C'est Sumathe, dont le nom provient de Sumatra,
-        qui est le premier pays et le premier échecs de l'Union. Sumathe est un kmg désaffecté depuis le disband de l'union de l'Union au Sumatra.
+        qui est le premier pays et le premier échecs de l'Union. Sumathe est un kmgg désaffecté depuis le disband de l'union de l'Union au Sumatra.
         Situé sur le littoral Est du Sumatra en Océanie, il est caché et mais est dans la porté des claims de ce pays.
     </p>
     <p class="paragraphe">
